--- a/views/market.hbs
+++ b/views/market.hbs
@@ -16,11 +16,9 @@
                 </div>
                     <div class="card-action">
                     <a href="/startups/{{_id}}" target="_blank">Open startup</a>
-                    <a href="/startups/edit/{{_id}}?allow=true">Edit</a>
+                    <a href="/startups/edit/{{_id}}">Edit</a>
                 </div>
             </div>
     {{/each}}
 </div>
-{{else}}
-
 {{/if}}
