--- a/views/markets.hbs
+++ b/views/markets.hbs
@@ -12,11 +12,9 @@
 
 <div class="regions">
     <div class='regionDeck'>
-
         {{#each marketArray}} 
-                <p class="example-shadow-2"><a href="/startups?market={{text}}" style="background-color: #40b1bf">{{text}}</a></p>
+                <p class="example-shadow-2"><a href="/startups?market={{text}}" >{{text}}</a></p>
         {{/each}}
-
         </a>
     </div>
 </div>
