--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,7 +6,7 @@
             {{#if isAdmin}}
                 <li style="margin-top: 6px;"><span  class="material-icons">account_circle</span></li>
                 <li >{{username}}: </li>
-                <li style="margin-right: 75px;"><a href="/admin">panel</a></li>
+                <li style="margin-right: 75px;"><a href="/admin">page</a></li>
             {{else}} 
                 <li style="margin-top: 6px;"><span  class="material-icons">account_circle</span></li>
                 <li style="margin-right: 75px;" >{{username}}</li>
