--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -9,7 +9,7 @@
         <div class="col s8 boxStartups">
         
             <div class="startup">
-                <strong  id="_title">Following</strong>
+                <strong  id="_title">{{titlePage}}</strong>
                 <p id="p_info">{{subStartup.length}} STARTUPS</p>
             </div>
 
