--- a/views/regions.hbs
+++ b/views/regions.hbs
@@ -11,11 +11,9 @@
 
     <div class="regions">
         <div class='regionDeck'>
-
             {{#each reg1}} 
-                 <p class="example-shadow-2"><a href="/startups?country={{text}}" style="background-color: #40b1bf">{{text}}</a></p>
+                 <p class="example-shadow-2"><a href="/startups?country={{text}}">{{text}}</a></p>
             {{/each}}
-
             </a>
         </div>
     </div>
@@ -30,7 +28,7 @@
         <div class='regionDeck'>
 
             {{#each reg2}} 
-                 <p class="example-shadow-2"><a href="/startups?country=/{{text}}" style="background-color: #40b1bf">{{text}}</a></p>
+                 <p class="example-shadow-2"><a href="/startups?country=/{{text}}">{{text}}</a></p>
             {{/each}}
 
             </a>
@@ -47,7 +45,7 @@
         <div class='regionDeck'>
 
             {{#each reg4}} 
-                 <p class="example-shadow-2"><a href="/startups?country={{text}}" style="background-color: #40b1bf">{{text}}</a></p>
+                 <p class="example-shadow-2"><a href="/startups?country={{text}}" >{{text}}</a></p>
             {{/each}}
 
             </a>
@@ -63,7 +61,7 @@
         <div class='regionDeck'>
 
             {{#each reg5}} 
-                 <p class="example-shadow-2"><a href="/startups?country={{text}}" style="background-color: #40b1bf">{{text}}</a></p>
+                 <p class="example-shadow-2"><a href="/startups?country={{text}}">{{text}}</a></p>
             {{/each}}
 
             </a>
